<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Welcome">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="285dp"
        android:layout_height="49dp"
        android:text="@string/welcome"
        android:textColor="#FAF9F9"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="104dp" />

    <Button
        android:id="@+id/banner"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/round"
        android:text="@string/banner"
        android:textColor="#FAFAFA"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="193dp" />

    <Button
        android:id="@+id/bustimeButton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/round"
        android:text="@string/bustime"
        android:textColor="#FCFCFC"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="286dp" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/round"
        android:text="@string/map"
        android:textColor="#FCFBFB"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="377dp" />

    <Button
        android:id="@+id/navigateButton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:background="@drawable/round"
        android:text="@string/navigate"
        android:textColor="#FCFBFB"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="475dp" />
</androidx.constraintlayout.widget.ConstraintLayout>