<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".Login">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="467dp"
        android:text="@string/welcome"
        android:textColor="#FAF9F9"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/banner"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/round"
        android:contentDescription="@string/banner"
        android:text="@string/banner"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/bustimeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <Button
        android:id="@+id/bustimeButton"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/round"
        android:contentDescription="@string/bustime"
        android:text="@string/bustime"
        android:textColor="#FCFCFC"
        app:layout_constraintBottom_toTopOf="@+id/mapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round"
        android:contentDescription="@string/Gmap"
        android:text="@string/map"
        android:textColor="#FCFBFB"
        app:layout_constraintBottom_toTopOf="@+id/navigateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bustimeButton" />

    <Button
        android:id="@+id/navigateButton"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginBottom="186dp"
        android:background="@drawable/round"
        android:text="@string/navigate"
        android:textColor="#FCFBFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapButton" />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/round"
        android:contentDescription="@string/signout"
        android:text="@string/signout"
        android:textColor="#FAF8F8"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigateButton" />

</androidx.constraintlayout.widget.ConstraintLayout>