<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_dark"
    android:padding="32dp"
    tools:context=".Permission">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/GmapLogo"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/permissionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/permission"
            android:textColor="#FAF9F9"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/per"
            android:textColor="#FCFCFC"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="276dp"
        android:background="@color/colorPrimary"
        android:text="@string/grant"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

</RelativeLayout>